--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "dotenv": "^17.2.3",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "next": "15.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-select": "^5.10.2",
+    "react-server-dom-webpack": "^19.2.3",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1"
   },
